trunk/Archive2/63/29f97e355f743b/output
main.cpp:28:12: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
    if(Ans = "y" or "Y")
       ~~~~^~~~~~~~~~~~
main.cpp:28:12: note: place parentheses around the assignment to silence this warning
    if(Ans = "y" or "Y")
           ^
       (               )
main.cpp:28:12: note: use '==' to turn this assignment into an equality comparison
    if(Ans = "y" or "Y")
           ^
           ==
main.cpp:30:17: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
    else if(Ans = "n" or "N")
            ~~~~^~~~~~~~~~~~
main.cpp:30:17: note: place parentheses around the assignment to silence this warning
    else if(Ans = "n" or "N")
                ^
            (               )
main.cpp:30:17: note: use '==' to turn this assignment into an equality comparison
    else if(Ans = "n" or "N")
                ^
                ==
main.cpp:33:10: error: use of undeclared identifier 'main'
        {main();}
         ^
2 warnings and 1 error generated.
